--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.1.3",
     "framer-motion": "^7.6.2",
-    "multiselect-react-dropdown": "1.6.11",
+    "multiselect-react-dropdown": "^2.0.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
